--- a/iOS-Depth-Sampler/Samples/Depth-from-Camera-Roll/DepthFromCameraRoll.storyboard
+++ b/iOS-Depth-Sampler/Samples/Depth-from-Camera-Roll/DepthFromCameraRoll.storyboard
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.13.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.9"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -33,7 +32,8 @@
                                 </connections>
                             </segmentedControl>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PcE-WA-x3Y">
-                                <rect key="frame" x="275" y="617" width="84" height="30"/>
+                                <rect key="frame" x="142" y="615" width="91" height="32"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                 <state key="normal" title="Open Picker"/>
                                 <connections>
                                     <action selector="pickerBtnTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="q2R-GC-lZp"/>
@@ -44,10 +44,9 @@
                         <constraints>
                             <constraint firstItem="7Ie-V0-YgW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="7E3-LK-McK"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7Ie-V0-YgW" secondAttribute="trailing" constant="16" id="EiH-MV-Jgg"/>
-                            <constraint firstItem="PcE-WA-x3Y" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" symbolic="YES" id="GR8-p5-889"/>
+                            <constraint firstItem="PcE-WA-x3Y" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Goj-mB-VZ5"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="PcE-WA-x3Y" secondAttribute="bottom" constant="20" id="In9-1W-mGa"/>
                             <constraint firstItem="MhN-6A-Pa1" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="NSG-27-s6R"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PcE-WA-x3Y" secondAttribute="trailing" constant="16" id="Yyg-ic-y4D"/>
                             <constraint firstAttribute="bottom" secondItem="MhN-6A-Pa1" secondAttribute="bottom" id="eKA-ec-E0N"/>
                             <constraint firstAttribute="trailing" secondItem="MhN-6A-Pa1" secondAttribute="trailing" id="eMU-gE-H2p"/>
                             <constraint firstItem="MhN-6A-Pa1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="idX-Vv-xGB"/>
